fix: android button align

--- a/apps/site-03/app/recommend/guess/[matchId]/gameCard.module.scss
+++ b/apps/site-03/app/recommend/guess/[matchId]/gameCard.module.scss
@@ -99,6 +99,7 @@
         }
 
         .noPaid {
+            line-height: 14px;
             height: 28px;
             display: flex;
             align-items: center;
